--- a/src/app/tv-shows-page/tv-shows-page.component.html
+++ b/src/app/tv-shows-page/tv-shows-page.component.html
@@ -45,6 +45,8 @@
     <div *ngFor="let show of shows">
       <movie-and-tv-card
         [movie]="show"
+              (trailer)="openTrailer(show.id)"
+
         [isSearch]="searchQuery"
       ></movie-and-tv-card>
     </div>
