--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -13,8 +13,10 @@
       <ng-template pTemplate="item" let-item>
         <div class="carousel-item-wrapper">
           <movie-and-tv-card
+          
             [movie]="item"
             (trailer)="emitTrailer($event)"
+            (verifyRequested)="verifyRequest()"
           ></movie-and-tv-card>
         </div>
       </ng-template>
