--- a/src/app/movie-and-tv-card/movie-and-tv-card.component.html
+++ b/src/app/movie-and-tv-card/movie-and-tv-card.component.html
@@ -1,14 +1,19 @@
 <div class="carousel-item-wrapper">
-  <div *ngIf="loading" class="skeleton-container">
+  <!-- Skeleton loader -->
+  <div
+    *ngIf="loading"
+    class="skeleton-container"
+    [ngStyle]="{ width: isSearch ? '260px' : '100%' }"
+  >
     <p-skeleton
       width="100%"
       effect="wave"
       height="16rem"
       styleClass="skeleton-card"
       loading="lazy"
-    />
+    ></p-skeleton>
 
-    <p-skeleton width="100%" borderRadius="16px" />
+    <p-skeleton width="100%" borderRadius="16px"></p-skeleton>
     <div class="rating-skeleton">
       <p-skeleton
         effect="wave"
@@ -16,37 +21,54 @@
         styleClass="skeleton-bottom"
         loading="lazy"
         borderRadius="16px"
-      />
+      ></p-skeleton>
       <p-skeleton
         effect="wave"
         width="6rem"
         styleClass="skeleton-bottom"
         borderRadius="16px"
         loading="lazy"
-      />
+      ></p-skeleton>
     </div>
   </div>
-  <!-- [ngClass]="{
-              'ng-invalid ng-dirty':
-                loginForm.get('username')?.invalid &&
-                loginForm.get('username')?.touched
-            }"
-              [ngClass]="{
-  'flip-card': !isSearch || isSearch.trim() === '' ,
-  'flip-card-search': isSearch && isSearch.trim() !== ''
-}"
-            -->
-  <div *ngIf="isSearch && isSearch.trim() !== ''" style="width: 260px;">
-    <div *ngIf="!loading" class="flip-card">
+
+  <!-- Card content -->
+  <div
+    *ngIf="!loading"
+    [ngClass]="{
+      'limited-width': isSearch && isSearch.trim() !== '',
+      'adult-item': isCertificationAdult(certification) && !isAdult
+    }"
+  >
+    <!-- Eye-slash icon: shows only if certification is adult-rated AND user is not isAdult -->
+    <i
+      *ngIf="isCertificationAdult(certification) && !isAdult && !wentThroughVerification"
+      class="verify-btn pi pi-eye-slash"
+      (click)="verifyAge()"
+    ></i>
+
+    <div class="flip-card">
       <div class="flip-card-inner">
         <!-- FRONT -->
         <div class="flip-card-front">
           <div class="movie-card">
+            <!-- If certification is adult, display a placeholder; otherwise poster image -->
+            <!-- <img
+              *ngIf="!isCertificationAdult(certification)"
+              [src]="
+                'https://image.tmdb.org/t/p/original/RYMX2wcKCBAr24UyPD7xwmjaTn.jpg'
+              "
+              [alt]="movie.title || movie.name"
+              loading="lazy"
+            /> -->
             <img
-              [src]="'https://image.tmdb.org/t/p/w500' + movie.poster_path"
+              [src]="
+                'https://image.tmdb.org/t/p/w500/'+movie.poster_path
+              "
               [alt]="movie.title || movie.name"
               loading="lazy"
             />
+
             <div class="movie-info">
               <h6 class="movie-title" style="line-height: normal">
                 {{ movie.title || movie.name }}
@@ -72,16 +94,12 @@
 
         <!-- BACK -->
         <div class="flip-card-back">
-          <h3 class="back-title" style="line-height: normal">
-            {{ movie.title || movie.name }}
-          </h3>
-
           <div class="info-row">
-            <span class="info-label">Released:</span>
-            <span class="info-value"
-              >{{ movie.release_date | date : "mediumDate"
-              }}{{ movie.first_air_date | date : "mediumDate" }}</span
-            >
+            <p class="info-label">Released:</p>
+            <span class="info-value">
+              {{ movie.release_date | date : "mediumDate" }}
+              {{ movie.first_air_date | date : "mediumDate" }}
+            </span>
           </div>
 
           <div *ngIf="cast.length > 0">
@@ -90,7 +108,7 @@
             </div>
             <ul class="cast-list">
               <p-scrollpanel
-                [style]="{ width: '100%', height: '160px' }"
+                [style]="{ width: '100%', height: '170px', marginBottom: '1rem' }"
                 class="mb-2"
               >
                 <li class="cast-item" *ngFor="let actor of cast">
@@ -134,105 +152,4 @@
       </div>
     </div>
   </div>
-
- <div *ngIf="!isSearch && isSearch.trim() === ''">
-    <div *ngIf="!loading" class="flip-card">
-      <div class="flip-card-inner">
-        <!-- FRONT -->
-        <div class="flip-card-front">
-          <div class="movie-card">
-            <img
-              [src]="'https://image.tmdb.org/t/p/w500' + movie.poster_path"
-              [alt]="movie.title || movie.name"
-              loading="lazy"
-            />
-            <div class="movie-info">
-              <h6 class="movie-title" style="line-height: normal">
-                {{ movie.title || movie.name }}
-              </h6>
-
-              <div
-                *ngIf="showRating"
-                class="d-flex align-items-center justify-content-between"
-              >
-                <small class="text-white">
-                  {{ movie.vote_average / 2 | number : "1.0-1" }}/5
-                </small>
-                <p-rating
-                  [ngModel]="movie.vote_average / 2"
-                  [readonly]="true"
-                  [stars]="5"
-                  class="primeng-rating"
-                ></p-rating>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- BACK -->
-        <div class="flip-card-back">
-          <h3 class="back-title" style="line-height: normal">
-            {{ movie.title || movie.name }}
-          </h3>
-
-          <div class="info-row">
-            <span class="info-label">Released:</span>
-            <span class="info-value"
-              >{{ movie.release_date | date : "mediumDate"
-              }}{{ movie.first_air_date | date : "mediumDate" }}</span
-            >
-          </div>
-
-          <div *ngIf="cast.length > 0">
-            <div class="info-row">
-              <span class="info-label">Cast:</span>
-            </div>
-            <ul class="cast-list">
-              <p-scrollpanel
-                [style]="{ width: '100%', height: '160px' }"
-                class="mb-2"
-              >
-                <li class="cast-item" *ngFor="let actor of cast">
-                  {{ actor }}
-                </li>
-              </p-scrollpanel>
-            </ul>
-          </div>
-
-          <div class="genres-container">
-            <p-iconfield>
-              <a *ngIf="movie.homepage" [href]="movie.homepage" target="_blank">
-                <i
-                  class="pi pi-info-circle me-2"
-                  pTooltip="More Info"
-                  tooltipPosition="top"
-                  style="
-                    cursor: pointer;
-                    font-size: 1.2rem;
-                    position: absolute;
-                    left: 0;
-                  "
-                ></i>
-              </a>
-
-              <i
-                class="pi pi-video"
-                pTooltip="Watch Trailer"
-                tooltipPosition="top"
-                style="
-                  cursor: pointer;
-                  font-size: 1.2rem;
-                  position: absolute;
-                  right: 0;
-                "
-                (click)="emitTrailer(movie.id)"
-              ></i>
-            </p-iconfield>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
 </div>
