--- a/src/app/movie-and-tv-card/movie-and-tv-card.component.html
+++ b/src/app/movie-and-tv-card/movie-and-tv-card.component.html
@@ -33,27 +33,39 @@
   </div>
 
   <!-- Card content -->
+  <i
+    *ngIf="
+      isCertificationAdult(certification) &&
+      !isAdult &&
+      !wentThroughVerification
+    "
+    class="verify-btn pi pi-eye-slash"
+    (click)="verifyAge()"
+  ></i>
+
   <div
     *ngIf="!loading"
     [ngClass]="{
       'limited-width': isSearch && isSearch.trim() !== '',
-      'adult-item': isCertificationAdult(certification) && !isAdult
     }"
->
+  >
     <!-- Eye-slash icon: shows only if certification is adult-rated AND user is not isAdult -->
-    <i
-      *ngIf="isCertificationAdult(certification) && !isAdult && !wentThroughVerification"
-      class="verify-btn pi pi-eye-slash"
-      (click)="verifyAge()"
 
-      
-    ></i>
-
-    <div class="flip-card">
-      <div class="flip-card-inner">
+    <div class="flip-card" [ngClass]="{}">
+      <div
+        class="flip-card-inner"
+        [ngClass]="{
+          'adult-item-hover': isCertificationAdult(certification) && !isAdult
+        }"
+      >
         <!-- FRONT -->
-        <div class="flip-card-front">
-          <div class="movie-card">
+        <div class="flip-card-front" [ngClass]="{}">
+          <div
+            class="movie-card"
+            [ngClass]="{
+              'adult-item': isCertificationAdult(certification) && !isAdult
+            }"
+          >
             <!-- If certification is adult, display a placeholder; otherwise poster image -->
             <!-- <img
               *ngIf="!isCertificationAdult(certification)"
@@ -64,9 +76,7 @@
               loading="lazy"
             /> -->
             <img
-              [src]="
-                'https://image.tmdb.org/t/p/w500/'+movie.poster_path
-              "
+              [src]="'https://image.tmdb.org/t/p/w500/' + movie.poster_path"
               [alt]="movie.title || movie.name"
               loading="lazy"
             />
@@ -110,7 +120,11 @@
             </div>
             <ul class="cast-list">
               <p-scrollpanel
-                [style]="{ width: '100%', height: '170px', marginBottom: '1rem' }"
+                [style]="{
+                  width: '100%',
+                  height: '170px',
+                  marginBottom: '1rem'
+                }"
                 class="mb-2"
               >
                 <li class="cast-item" *ngFor="let actor of cast">
