--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -21,6 +21,11 @@
                 loginForm.get('username')?.invalid &&
                 loginForm.get('username')?.touched
             }"
+            [style]="{
+              background: 'white',
+              color: 'lightgray',
+              border: '1px solid #ccc'
+            }"
           />
         </span>
         <small
@@ -52,6 +57,11 @@
                 'ng-invalid ng-dirty':
                   loginForm.get('password')?.invalid &&
                   loginForm.get('password')?.touched
+              }"
+              [style]="{
+                background: 'white',
+                color: 'lightgray',
+                border: '1px solid #ccc'
               }"
             />
             <i
@@ -97,7 +107,18 @@
 
       <div class="signup-link">
         <p>Don't have an account? <a routerLink="/signup">Sign up</a></p>
-       <a routerLink="/home" class="continue-guest"><p class="mt-3 " style=" font-size: small; color: rgb(122, 111, 111) ;font-weight: bold;">Continue as guest </p></a>
+        <a routerLink="/home" class="continue-guest"
+          ><p
+            class="mt-3"
+            style="
+              font-size: small;
+              color: rgb(122, 111, 111);
+              font-weight: bold;
+            "
+          >
+            Continue as guest
+          </p></a
+        >
       </div>
     </form>
   </div>
