--- a/src/app/trailer/trailer.component.html
+++ b/src/app/trailer/trailer.component.html
@@ -32,20 +32,9 @@
           [height]="450"
           width="100%"
           [playerVars]="playerVars"
-          style="display: block; border-radius: 12px; overflow: hidden"
+          style="display: block; border-radius: 12px; overflow: hidden; pointer-events: none;"
         ></youtube-player>
-        <div
-          class="interaction-blocker"
-          style="
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: transparent;
-            z-index: 5;
-          "
-        ></div>
+ 
         <div
           class="controls-overlay"
           style="
